<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E8C2FF"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/etname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/name"
        android:inputType="text" />

    <EditText
        android:id="@+id/etnumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/mobile_number"
        android:inputType="number" />

    <EditText
        android:id="@+id/etpax"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/pax"
        android:inputType="text" />

    <TextView
        android:id="@+id/tvdate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/date" />

    <DatePicker
        android:id="@+id/datePicker"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:calendarViewShown="false"
        android:datePickerMode="spinner" />

    <TextView
        android:id="@+id/tvtime"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/time" />

    <TimePicker
        android:id="@+id/timePicker"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:timePickerMode="spinner" />

    <CheckBox
        android:id="@+id/smoking"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Smoking Area" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnreset"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/reset" />

        <Button
            android:id="@+id/btnsubmit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/reserve" />
    </LinearLayout>

</LinearLayout>